fix hr alignment

--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -37,6 +37,11 @@ body {
     margin-top: 60px;
 }
 
+.img {
+    max-width: 100%;
+    height: auto;
+    width: auto\9; /* ie8 */
+}
 
 .info {
 	display:inline;
@@ -84,12 +89,4 @@ ul.expertise-list {
    -webkit-columns: 2;
    -moz-columns: 2;
    font-size: 130%;
-}
-
-@media (max-width: 700px) {
-   .about-para { float: none; }
-}
-
-@media (max-width: 600px) {
-   .image { width:: 100%; }
 }
